[gd_scene load_steps=4 format=3 uid="uid://b3bsfh48yy25j"]

[ext_resource type="Script" path="res://Scenes/autorennen/enemy.gd" id="1_p0ig6"]
[ext_resource type="Texture2D" uid="uid://cfd1qryylwyvw" path="res://assets/Autos/enemy_car.png" id="2_ei7r8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2rl0"]
size = Vector2(26, 48)

[node name="enemy_car_1" type="Area2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_p0ig6")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_ei7r8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u2rl0")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -35)
enable_node_path = NodePath(".")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
